--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Malla Traducción USACH</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Malla Traducción - USACH</h1>
+  <h1>Malla Traducción USACH</h1>
   <div id="malla"></div>
-
   <script src="script.js"></script>
 </body>
 </html>
